--- a/about/YauHoFungResume.html
+++ b/about/YauHoFungResume.html
@@ -118,17 +118,7 @@
       table th {
         padding: 0;
       }
-      .c3 {
-        padding-top: 0pt;
-        padding-bottom: 0pt;
-        line-height: 1.15;
-        page-break-after: avoid;
-        orphans: 2;
-        widows: 2;
-        text-align: left;
-        height: 11pt;
-      }
-      .c12 {
+      .c6 {
         padding-top: 0pt;
         padding-bottom: 3pt;
         line-height: 1.15;
@@ -137,7 +127,7 @@
         widows: 2;
         text-align: left;
       }
-      .c0 {
+      .c5 {
         -webkit-text-decoration-skip: none;
         color: #1155cc;
         font-weight: 400;
@@ -145,24 +135,6 @@
         text-decoration-skip-ink: none;
         font-size: 9pt;
         font-family: "Times New Roman";
-      }
-      .c9 {
-        color: #000000;
-        font-weight: 400;
-        text-decoration: none;
-        vertical-align: baseline;
-        font-size: 26pt;
-        font-family: "Times New Roman";
-        font-style: normal;
-      }
-      .c4 {
-        padding-top: 0pt;
-        padding-bottom: 0pt;
-        line-height: 1.15;
-        page-break-after: avoid;
-        orphans: 2;
-        widows: 2;
-        text-align: left;
       }
       .c2 {
         color: #000000;
@@ -173,43 +145,55 @@
         font-family: "Times New Roman";
         font-style: normal;
       }
-      .c5 {
-        -webkit-text-decoration-skip: none;
+      .c1 {
+        padding-top: 0pt;
+        padding-bottom: 0pt;
+        line-height: 1.15;
+        page-break-after: avoid;
+        orphans: 2;
+        widows: 2;
+        text-align: left;
+      }
+      .c12 {
+        font-weight: 400;
+        text-decoration: none;
+        font-size: 26pt;
+        font-family: "Times New Roman";
+      }
+      .c9 {
         color: #000000;
-        text-decoration: underline;
         vertical-align: baseline;
-        text-decoration-skip-ink: none;
         font-style: normal;
       }
-      .c7 {
-        -webkit-text-decoration-skip: none;
-        color: #1155cc;
-        text-decoration: underline;
-        text-decoration-skip-ink: none;
-      }
-      .c8 {
-        font-size: 9pt;
-        font-family: "Times New Roman";
-        font-weight: 400;
-      }
-      .c1 {
+      .c0 {
         font-size: 9pt;
         font-family: "Times New Roman";
         font-weight: 700;
       }
-      .c11 {
-        background-color: #ffffff;
-        max-width: 540pt;
-        padding: 36pt 36pt 36pt 36pt;
-      }
-      .c10 {
+      .c8 {
         -webkit-text-decoration-skip: none;
         text-decoration: underline;
         text-decoration-skip-ink: none;
       }
-      .c6 {
+      .c10 {
+        background-color: #ffffff;
+        max-width: 540pt;
+        padding: 36pt 36pt 36pt 36pt;
+      }
+      .c7 {
+        font-size: 9pt;
+        font-family: "Times New Roman";
+        font-weight: 400;
+      }
+      .c4 {
         color: inherit;
         text-decoration: inherit;
+      }
+      .c3 {
+        height: 11pt;
+      }
+      .c11 {
+        color: #1155cc;
       }
       .title {
         padding-top: 0pt;
@@ -321,96 +305,109 @@
       }
     </style>
   </head>
-  <body class="c11">
-    <p class="c12 title" id="h.i0wgzwj9czi3">
-      <span class="c9">Fung, Yau Ho</span>
+  <body class="c10 doc-content">
+    <p class="c6 title" id="h.i0wgzwj9czi3">
+      <span class="c9 c12">Fung, Yau Ho</span>
     </p>
-    <p class="c4">
-      <span class="c0"
-        ><a class="c6" href="mailto:yauho.fung@student.mec.cuny.edu"
+    <p class="c1">
+      <span class="c5"
+        ><a class="c4" href="mailto:yauho.fung@student.mec.cuny.edu"
           >Email</a
         ></span
-      ><span class="c8">&nbsp;| </span
-      ><span class="c0"
+      ><span class="c7">&nbsp;| </span
+      ><span class="c5"
         ><a
-          class="c6"
-          href="https://www.google.com/url?q=https://github.com/yauhofung&amp;sa=D&amp;source=editors&amp;ust=1651877030300561&amp;usg=AOvVaw3EAlE6d1RtApo4Q5UoQrg9"
+          class="c4"
+          href="https://www.google.com/url?q=https://github.com/yauhofung&amp;sa=D&amp;source=editors&amp;ust=1661713478678640&amp;usg=AOvVaw1bs0ahtFoDXbt2MMHx3hw3"
           >GitHub</a
         ></span
-      ><span class="c8">&nbsp;| </span
-      ><span class="c0"
+      ><span class="c7">&nbsp;| </span
+      ><span class="c5"
         ><a
-          class="c6"
-          href="https://www.google.com/url?q=https://www.linkedin.com/in/yauhofung/&amp;sa=D&amp;source=editors&amp;ust=1651877030300857&amp;usg=AOvVaw2ssVkDyqoWLrZDh2mIlH0g"
+          class="c4"
+          href="https://www.google.com/url?q=https://www.linkedin.com/in/yauhofung/&amp;sa=D&amp;source=editors&amp;ust=1661713478678995&amp;usg=AOvVaw20-v1ZGWzp9Y908LJKCP15"
           >LinkedIn</a
         ></span
       >
     </p>
-    <p class="c3"><span class="c2"></span></p>
-    <p class="c4"><span class="c1 c10">QUALIFICATIONS</span></p>
-    <p class="c4">
-      <span class="c1">Programming Languages:</span
+    <p class="c1 c3"><span class="c2"></span></p>
+    <p class="c1"><span class="c0 c8">QUALIFICATIONS</span></p>
+    <p class="c1">
+      <span class="c0">Programming Languages:</span
+      ><span class="c2">&nbsp;C++, Python, MATLAB, JavaScript, Java, SQL</span>
+    </p>
+    <p class="c1">
+      <span class="c0">Libraries:</span
       ><span class="c2"
-        >&nbsp;C++, MATLAB, HTML, CSS, JavaScript, Python, Java, SQL</span
+        >&nbsp;Tkinter, NumPy, Matplotlib, React Native, Material-UI, ReactJS,
+        Materialize, NativeBase</span
       >
     </p>
-    <p class="c4">
-      <span class="c1">Libraries:</span
-      ><span class="c2"
-        >&nbsp;React Native, Material-UI, ReactJS, Materialize, NativeBase,
-        NumPy, Pandas, Matplotlib, GeoPandas, Cartopy, HoloViews, GeoViews</span
-      >
-    </p>
-    <p class="c4">
-      <span class="c1">Version Control:</span
+    <p class="c1">
+      <span class="c0">Version Control:</span
       ><span class="c2"
         >&nbsp;GitHub, GitLab, Slack, Trello, Jira, Confluence</span
       >
     </p>
-    <p class="c4">
-      <span class="c1">Editors:</span
+    <p class="c1">
+      <span class="c0">Editors:</span
       ><span class="c2">&nbsp;Visual Studio Code, Replit, VIM</span>
     </p>
-    <p class="c4">
-      <span class="c1">Languages:</span
-      ><span class="c8">&nbsp;English, Cantonese, Mandarin</span>
+    <p class="c1">
+      <span class="c0">Languages:</span
+      ><span class="c7">&nbsp;English, Cantonese, Mandarin</span>
     </p>
-    <p class="c3"><span class="c2"></span></p>
-    <p class="c4"><span class="c1 c5">EXPERIENCE</span></p>
-    <p class="c4">
-      <span class="c1"
+    <p class="c1 c3"><span class="c2"></span></p>
+    <p class="c1"><span class="c9 c0 c8">EXPERIENCE</span></p>
+    <p class="c1">
+      <span class="c0"
         >NASA Goddard Space Flight Center, GISS RSP Software Development
         Intern</span
       ><span class="c2">&nbsp;(January 2022 - August 2022)</span>
     </p>
-    <p class="c4">
+    <p class="c1">
       <span class="c2"
-        >Study the remote sensing process of collecting data on aerosols using
-        the Research Scanning Polarimeter (RSP) instrument. Debug and improve
-        upon the RSP mobile application. Recreate the RSP data visualizer
-        written in Interactive Data Language (IDL) using Python. Meet with the
-        assigned mentor to provide daily updates. Meet with the RSP team to
-        present weekly findings.</span
+        >Study the remote sensing process of collecting data on atmospheric
+        aerosols using the Research Scanning Polarimeter (RSP) instrument.
+        Taking inspiration from the RSP Viewer written in Interactive Data
+        Language, develop a data visualizer using Python. Debug and improve upon
+        the RSP mobile application. Meet with the assigned mentor to provide
+        daily updates. Meet with the RSP team to present weekly progress.</span
       >
     </p>
-    <p class="c4">
-      <span class="c1"
+    <p class="c1">
+      <span class="c0"
+        >Hardin-Simmons University, NASA Interns Asteroid Search Campaign
+        Volunteer</span
+      ><span class="c2">&nbsp;(March 2022 - May 2022)</span>
+    </p>
+    <p class="c1">
+      <span class="c2"
+        >Study all provided instructional materials for using the Astrometrica
+        software application. Using Astrometrica, accurately search for and
+        measure asteroids within image sets taken by the Pan-STARRS telescope.
+        Communicate findings with the assigned teammate. Prepare and submit
+        reports for potential detections to the IASC website.</span
+      >
+    </p>
+    <p class="c1">
+      <span class="c0"
         >CUNY Medgar Evers College, Tech Talent Pipeline Teaching
         Assistant</span
       ><span class="c2">&nbsp;(January 2022 - January 2022)</span>
     </p>
-    <p class="c4">
+    <p class="c1">
       <span class="c2"
         >Assist the primary instructor&rsquo;s lectures and provide technical
         consultation during working sessions. Meet with the instructional staff
         for daily debriefings.</span
       >
     </p>
-    <p class="c4">
-      <span class="c1">The University of Vermont, NASA R3 Hackathon Worker</span
+    <p class="c1">
+      <span class="c0">The University of Vermont, NASA R3 Hackathon Worker</span
       ><span class="c2">&nbsp;(November 2021 - January 2022)</span>
     </p>
-    <p class="c4">
+    <p class="c1">
       <span class="c2"
         >Study the fundamental land cover classes as the application domain
         knowledge. Perform image labeling using Amazon SageMaker Ground Truth.
@@ -421,13 +418,13 @@
         the training experiences and their effectiveness.</span
       >
     </p>
-    <p class="c4">
-      <span class="c1">Uvii, Inc.</span
-      ><span class="c1">, Associate Project Manager</span
-      ><span class="c8">&nbsp;(</span
+    <p class="c1">
+      <span class="c0">Uvii, Inc.</span
+      ><span class="c0">, Associate Project Manager</span
+      ><span class="c7">&nbsp;(</span
       ><span class="c2">August 2021 - January 2022)</span>
     </p>
-    <p class="c4">
+    <p class="c1">
       <span class="c2"
         >Document goals for sprints. Meet with the development team to discuss
         blockers. Delegate founder assignments to team members. Review tasks
@@ -435,131 +432,131 @@
         the company drive.</span
       >
     </p>
-    <p class="c4">
-      <span class="c1"
+    <p class="c1">
+      <span class="c0"
         >CUNY Medgar Evers College, CS Dojo Teaching Assistant</span
       ><span class="c2">&nbsp;(October 2021 - December 2021)</span>
     </p>
-    <p class="c4">
+    <p class="c1">
       <span class="c2"
         >Design weekly C++ projects. Meet with students to receive progress
         updates and offer programming assistance. Verify weekly submissions for
         completions.</span
       >
     </p>
-    <p class="c4">
-      <span class="c1">CUNY Medgar Evers College, CUNY 2X Tech Tutor</span
+    <p class="c1">
+      <span class="c0">CUNY Medgar Evers College, CUNY 2X Tech Tutor</span
       ><span class="c2">&nbsp;(October 2021 - December 2021)</span>
     </p>
-    <p class="c4">
+    <p class="c1">
       <span class="c2"
         >Host weekly office hours. Schedule one-on-one meetings with CS/CIS
         students in need of tutoring.</span
       >
     </p>
-    <p class="c4">
-      <span class="c1">Uvii, Inc., Quality Assurance Tester / Debugger</span
-      ><span class="c8">&nbsp;(</span
+    <p class="c1">
+      <span class="c0">Uvii, Inc., Quality Assurance Tester / Debugger</span
+      ><span class="c7">&nbsp;(</span
       ><span class="c2">June 2021 - August 2021)</span>
     </p>
-    <p class="c4">
+    <p class="c1">
       <span class="c2"
         >Stress test features for bugs and improvements. Submit bug
         reports/fixes to the development team for review. Support the product
         team with UI/UX insights.</span
       >
     </p>
-    <p class="c4">
-      <span class="c1"
+    <p class="c1">
+      <span class="c0"
         >MEC Education Technology Center, Computer Lab Technician</span
-      ><span class="c8">&nbsp;(</span
+      ><span class="c7">&nbsp;(</span
       ><span class="c2">October 2019 - March 2020)</span>
     </p>
-    <p class="c4">
+    <p class="c1">
       <span class="c2"
         >Provide students and faculty with CUNY Blackboard support. Respond to
         phone calls and orders from the supervisor.</span
       >
     </p>
-    <p class="c3"><span class="c2"></span></p>
-    <p class="c4"><span class="c5 c1">PROJECTS</span></p>
-    <p class="c4">
-      <span class="c1 c7"
+    <p class="c1 c3"><span class="c2"></span></p>
+    <p class="c1"><span class="c9 c0 c8">PROJECTS</span></p>
+    <p class="c1">
+      <span class="c0 c8 c11"
         ><a
-          class="c6"
-          href="https://www.google.com/url?q=https://github.com/yauhofung/PandemicSimulation&amp;sa=D&amp;source=editors&amp;ust=1651877030303055&amp;usg=AOvVaw2xqpzo_WpfT8nYB2yIg7K4"
+          class="c4"
+          href="https://www.google.com/url?q=https://github.com/yauhofung/PandemicSimulation&amp;sa=D&amp;source=editors&amp;ust=1661713478682577&amp;usg=AOvVaw07-tWhYQvGHRsikD9_cXfO"
           >MATLAB Pandemic Simulation</a
         ></span
-      ><span class="c1">, Scientific Programming Final Project</span
-      ><span class="c8">&nbsp;(December 2021)</span>
+      ><span class="c0">, Scientific Programming Final Project</span
+      ><span class="c7">&nbsp;(December 2021)</span>
     </p>
-    <p class="c4">
-      <span class="c7 c1"
+    <p class="c1">
+      <span class="c0 c8 c11"
         ><a
-          class="c6"
-          href="https://www.google.com/url?q=https://github.com/yauhofung/AnimationTest&amp;sa=D&amp;source=editors&amp;ust=1651877030303391&amp;usg=AOvVaw2NcEekbmT16B7EPSFj_dGX"
+          class="c4"
+          href="https://www.google.com/url?q=https://github.com/yauhofung/AnimationTest&amp;sa=D&amp;source=editors&amp;ust=1661713478682980&amp;usg=AOvVaw3vds81oRENVri39QPcbBLT"
           >C++ Animation Test</a
         ></span
-      ><span class="c1">, Personal Experimental Project</span
+      ><span class="c0">, Personal Experimental Project</span
       ><span class="c2">&nbsp;(November 2021)</span>
     </p>
-    <p class="c4">
-      <span class="c7 c1"
+    <p class="c1">
+      <span class="c0 c8 c11"
         ><a
-          class="c6"
-          href="https://www.google.com/url?q=https://github.com/yauhofung/MovieSearchEngine&amp;sa=D&amp;source=editors&amp;ust=1651877030303699&amp;usg=AOvVaw00qTIqRpDnc6OlKGqjERiB"
+          class="c4"
+          href="https://www.google.com/url?q=https://github.com/yauhofung/MovieSearchEngine&amp;sa=D&amp;source=editors&amp;ust=1661713478683357&amp;usg=AOvVaw0UtTEidWpcddD8TUCMZMcT"
           >Movie Search Engine</a
         ></span
-      ><span class="c1">, CUNY 2X Tech Talent Pipeline Capstone Project</span
+      ><span class="c0">, CUNY 2X Tech Talent Pipeline Capstone Project</span
       ><span class="c2">&nbsp;(January 2021)</span>
     </p>
-    <p class="c4">
-      <span class="c7 c1"
+    <p class="c1">
+      <span class="c0 c8 c11"
         ><a
-          class="c6"
-          href="https://www.google.com/url?q=https://github.com/yauhofung/RandomGenerator&amp;sa=D&amp;source=editors&amp;ust=1651877030303999&amp;usg=AOvVaw1Q5sGDgCzHEQ0jz56tOrmw"
+          class="c4"
+          href="https://www.google.com/url?q=https://github.com/yauhofung/RandomGenerator&amp;sa=D&amp;source=editors&amp;ust=1661713478683754&amp;usg=AOvVaw3u569cq3NB4r75IEMDiJLD"
           >C++ Random Generator</a
         ></span
-      ><span class="c1">, Personal Experimental Project</span
+      ><span class="c0">, Personal Experimental Project</span
       ><span class="c2">&nbsp;(October 2019)</span>
     </p>
-    <p class="c3"><span class="c2"></span></p>
-    <p class="c4"><span class="c5 c1">EDUCATION</span></p>
-    <p class="c4">
-      <span class="c1">CUNY </span
-      ><span class="c1">Medgar Evers College, Computer Science B.S.</span
+    <p class="c1 c3"><span class="c2"></span></p>
+    <p class="c1"><span class="c9 c0 c8">EDUCATION</span></p>
+    <p class="c1">
+      <span class="c0">CUNY </span
+      ><span class="c0">Medgar Evers College, Computer Science B.S.</span
       ><span class="c2">&nbsp;(August 2018 - December 2021)</span>
     </p>
-    <p class="c4"><span class="c2">3.928 GPA</span></p>
-    <p class="c3"><span class="c2"></span></p>
-    <p class="c4"><span class="c5 c1">ACHIEVEMENTS</span></p>
-    <p class="c4">
-      <span class="c1"
+    <p class="c1"><span class="c2">3.928 GPA</span></p>
+    <p class="c1 c3"><span class="c2"></span></p>
+    <p class="c1"><span class="c9 c0 c8">ACHIEVEMENTS</span></p>
+    <p class="c1">
+      <span class="c0"
         >CUNY Medgar Evers College, Valedictorian of the Class of 2022</span
       ><span class="c2">&nbsp;(June 2022)</span>
     </p>
-    <p class="c4">
-      <span class="c1">CUNY Medgar Evers College, </span
-      ><span class="c1">Dean&rsquo;s List</span
+    <p class="c1">
+      <span class="c0">CUNY Medgar Evers College, </span
+      ><span class="c0">Dean&rsquo;s List</span
       ><span class="c2"
         >&nbsp;(June 2021, December 2020, June 2020, January 2020, June
         2019)</span
       >
     </p>
-    <p class="c4">
-      <span class="c1"
+    <p class="c1">
+      <span class="c0"
         >CUNY Medgar Evers College, Award of Outstanding Academic
         Excellence</span
       ><span class="c2">&nbsp;(May 2020)</span>
     </p>
-    <p class="c4">
-      <span class="c1"
+    <p class="c1">
+      <span class="c0"
         >CUNY Medgar Evers College, First Place Winner of the CS Students
         Programming Contest</span
       ><span class="c2">&nbsp;(May 2020)</span>
     </p>
-    <p class="c4">
-      <span class="c1">College Board, AP Scholar with Distinction</span
+    <p class="c1">
+      <span class="c0">College Board, AP Scholar with Distinction</span
       ><span class="c2">&nbsp;(July 2018)</span>
     </p>
   </body>
