--- a/about/YauHoFungResume.html
+++ b/about/YauHoFungResume.html
@@ -127,16 +127,7 @@
         widows: 2;
         text-align: left;
       }
-      .c5 {
-        -webkit-text-decoration-skip: none;
-        color: #1155cc;
-        font-weight: 400;
-        text-decoration: underline;
-        text-decoration-skip-ink: none;
-        font-size: 9pt;
-        font-family: "Times New Roman";
-      }
-      .c2 {
+      .c0 {
         color: #000000;
         font-weight: 400;
         text-decoration: none;
@@ -154,33 +145,39 @@
         widows: 2;
         text-align: left;
       }
-      .c12 {
+      .c5 {
+        -webkit-text-decoration-skip: none;
+        color: #1155cc;
+        text-decoration: underline;
+        text-decoration-skip-ink: none;
+      }
+      .c11 {
         font-weight: 400;
         text-decoration: none;
         font-size: 26pt;
         font-family: "Times New Roman";
+      }
+      .c2 {
+        font-size: 9pt;
+        font-family: "Times New Roman";
+        font-weight: 700;
+      }
+      .c8 {
+        background-color: #ffffff;
+        max-width: 540pt;
+        padding: 36pt 36pt 36pt 36pt;
       }
       .c9 {
         color: #000000;
         vertical-align: baseline;
         font-style: normal;
       }
-      .c0 {
-        font-size: 9pt;
-        font-family: "Times New Roman";
-        font-weight: 700;
-      }
-      .c8 {
+      .c7 {
         -webkit-text-decoration-skip: none;
         text-decoration: underline;
         text-decoration-skip-ink: none;
       }
       .c10 {
-        background-color: #ffffff;
-        max-width: 540pt;
-        padding: 36pt 36pt 36pt 36pt;
-      }
-      .c7 {
         font-size: 9pt;
         font-family: "Times New Roman";
         font-weight: 400;
@@ -191,9 +188,6 @@
       }
       .c3 {
         height: 11pt;
-      }
-      .c11 {
-        color: #1155cc;
       }
       .title {
         padding-top: 0pt;
@@ -305,68 +299,68 @@
       }
     </style>
   </head>
-  <body class="c10 doc-content">
+  <body class="c8 doc-content">
     <p class="c6 title" id="h.i0wgzwj9czi3">
-      <span class="c9 c12">Fung, Yau Ho</span>
+      <span class="c9 c11">Fung, Yau Ho</span>
     </p>
     <p class="c1">
-      <span class="c5"
+      <span class="c5 c10"
         ><a class="c4" href="mailto:yauho.fung@student.mec.cuny.edu"
           >Email</a
         ></span
-      ><span class="c7">&nbsp;| </span
-      ><span class="c5"
+      ><span class="c10">&nbsp;| </span
+      ><span class="c5 c10"
         ><a
           class="c4"
-          href="https://www.google.com/url?q=https://github.com/yauhofung&amp;sa=D&amp;source=editors&amp;ust=1661713478678640&amp;usg=AOvVaw1bs0ahtFoDXbt2MMHx3hw3"
+          href="https://www.google.com/url?q=https://github.com/yauhofung&amp;sa=D&amp;source=editors&amp;ust=1661714525890880&amp;usg=AOvVaw20XsPaOx_kqxvVOPvOyDwK"
           >GitHub</a
         ></span
-      ><span class="c7">&nbsp;| </span
-      ><span class="c5"
+      ><span class="c10">&nbsp;| </span
+      ><span class="c5 c10"
         ><a
           class="c4"
-          href="https://www.google.com/url?q=https://www.linkedin.com/in/yauhofung/&amp;sa=D&amp;source=editors&amp;ust=1661713478678995&amp;usg=AOvVaw20-v1ZGWzp9Y908LJKCP15"
+          href="https://www.google.com/url?q=https://www.linkedin.com/in/yauhofung/&amp;sa=D&amp;source=editors&amp;ust=1661714525891313&amp;usg=AOvVaw0BJeDASG6PjsXpRDrGeIHw"
           >LinkedIn</a
         ></span
       >
     </p>
-    <p class="c1 c3"><span class="c2"></span></p>
-    <p class="c1"><span class="c0 c8">QUALIFICATIONS</span></p>
+    <p class="c1 c3"><span class="c0"></span></p>
+    <p class="c1"><span class="c2 c7">QUALIFICATIONS</span></p>
     <p class="c1">
-      <span class="c0">Programming Languages:</span
-      ><span class="c2">&nbsp;C++, Python, MATLAB, JavaScript, Java, SQL</span>
+      <span class="c2">Programming Languages:</span
+      ><span class="c0">&nbsp;C++, Python, MATLAB, JavaScript, Java, SQL</span>
     </p>
     <p class="c1">
-      <span class="c0">Libraries:</span
-      ><span class="c2"
+      <span class="c2">Libraries:</span
+      ><span class="c0"
         >&nbsp;Tkinter, NumPy, Matplotlib, React Native, Material-UI, ReactJS,
         Materialize, NativeBase</span
       >
     </p>
     <p class="c1">
-      <span class="c0">Version Control:</span
-      ><span class="c2"
+      <span class="c2">Version Control:</span
+      ><span class="c0"
         >&nbsp;GitHub, GitLab, Slack, Trello, Jira, Confluence</span
       >
     </p>
     <p class="c1">
-      <span class="c0">Editors:</span
-      ><span class="c2">&nbsp;Visual Studio Code, Replit, VIM</span>
+      <span class="c2">Editors:</span
+      ><span class="c0">&nbsp;Visual Studio Code, Replit, VIM</span>
     </p>
     <p class="c1">
-      <span class="c0">Languages:</span
-      ><span class="c7">&nbsp;English, Cantonese, Mandarin</span>
+      <span class="c2">Languages:</span
+      ><span class="c10">&nbsp;English, Cantonese, Mandarin</span>
     </p>
-    <p class="c1 c3"><span class="c2"></span></p>
-    <p class="c1"><span class="c9 c0 c8">EXPERIENCE</span></p>
-    <p class="c1">
-      <span class="c0"
-        >NASA Goddard Space Flight Center, GISS RSP Software Development
-        Intern</span
-      ><span class="c2">&nbsp;(January 2022 - August 2022)</span>
-    </p>
+    <p class="c1 c3"><span class="c0"></span></p>
+    <p class="c1"><span class="c2 c7 c9">EXPERIENCE</span></p>
     <p class="c1">
       <span class="c2"
+        >NASA Goddard Space Flight Center, GISS RSP Software Development
+        Intern</span
+      ><span class="c0">&nbsp;(January 2022 - August 2022)</span>
+    </p>
+    <p class="c1">
+      <span class="c0"
         >Study the remote sensing process of collecting data on atmospheric
         aerosols using the Research Scanning Polarimeter (RSP) instrument.
         Taking inspiration from the RSP Viewer written in Interactive Data
@@ -376,13 +370,13 @@
       >
     </p>
     <p class="c1">
-      <span class="c0"
+      <span class="c2"
         >Hardin-Simmons University, NASA Interns Asteroid Search Campaign
         Volunteer</span
-      ><span class="c2">&nbsp;(March 2022 - May 2022)</span>
+      ><span class="c0">&nbsp;(March 2022 - May 2022)</span>
     </p>
     <p class="c1">
-      <span class="c2"
+      <span class="c0"
         >Study all provided instructional materials for using the Astrometrica
         software application. Using Astrometrica, accurately search for and
         measure asteroids within image sets taken by the Pan-STARRS telescope.
@@ -391,24 +385,24 @@
       >
     </p>
     <p class="c1">
-      <span class="c0"
+      <span class="c2"
         >CUNY Medgar Evers College, Tech Talent Pipeline Teaching
         Assistant</span
-      ><span class="c2">&nbsp;(January 2022 - January 2022)</span>
+      ><span class="c0">&nbsp;(January 2022 - January 2022)</span>
     </p>
     <p class="c1">
-      <span class="c2"
+      <span class="c0"
         >Assist the primary instructor&rsquo;s lectures and provide technical
         consultation during working sessions. Meet with the instructional staff
         for daily debriefings.</span
       >
     </p>
     <p class="c1">
-      <span class="c0">The University of Vermont, NASA R3 Hackathon Worker</span
-      ><span class="c2">&nbsp;(November 2021 - January 2022)</span>
+      <span class="c2">University of Vermont, NASA R3 Hackathon Worker</span
+      ><span class="c0">&nbsp;(November 2021 - January 2022)</span>
     </p>
     <p class="c1">
-      <span class="c2"
+      <span class="c0"
         >Study the fundamental land cover classes as the application domain
         knowledge. Perform image labeling using Amazon SageMaker Ground Truth.
         Train machine-learning image classifiers with the labeled images. Test
@@ -419,13 +413,13 @@
       >
     </p>
     <p class="c1">
-      <span class="c0">Uvii, Inc.</span
-      ><span class="c0">, Associate Project Manager</span
-      ><span class="c7">&nbsp;(</span
-      ><span class="c2">August 2021 - January 2022)</span>
+      <span class="c2">Uvii, Inc.</span
+      ><span class="c2">, Associate Project Manager</span
+      ><span class="c10">&nbsp;(</span
+      ><span class="c0">August 2021 - January 2022)</span>
     </p>
     <p class="c1">
-      <span class="c2"
+      <span class="c0"
         >Document goals for sprints. Meet with the development team to discuss
         blockers. Delegate founder assignments to team members. Review tasks
         during sprint review meetings. Record and document Zoom recordings via
@@ -433,131 +427,131 @@
       >
     </p>
     <p class="c1">
-      <span class="c0"
+      <span class="c2"
         >CUNY Medgar Evers College, CS Dojo Teaching Assistant</span
-      ><span class="c2">&nbsp;(October 2021 - December 2021)</span>
+      ><span class="c0">&nbsp;(October 2021 - December 2021)</span>
     </p>
     <p class="c1">
-      <span class="c2"
+      <span class="c0"
         >Design weekly C++ projects. Meet with students to receive progress
         updates and offer programming assistance. Verify weekly submissions for
         completions.</span
       >
     </p>
     <p class="c1">
-      <span class="c0">CUNY Medgar Evers College, CUNY 2X Tech Tutor</span
-      ><span class="c2">&nbsp;(October 2021 - December 2021)</span>
+      <span class="c2">CUNY Medgar Evers College, CUNY 2X Tech Tutor</span
+      ><span class="c0">&nbsp;(October 2021 - December 2021)</span>
     </p>
     <p class="c1">
-      <span class="c2"
+      <span class="c0"
         >Host weekly office hours. Schedule one-on-one meetings with CS/CIS
         students in need of tutoring.</span
       >
     </p>
     <p class="c1">
-      <span class="c0">Uvii, Inc., Quality Assurance Tester / Debugger</span
-      ><span class="c7">&nbsp;(</span
-      ><span class="c2">June 2021 - August 2021)</span>
+      <span class="c2">Uvii, Inc., Quality Assurance Tester / Debugger</span
+      ><span class="c10">&nbsp;(</span
+      ><span class="c0">June 2021 - August 2021)</span>
     </p>
     <p class="c1">
-      <span class="c2"
+      <span class="c0"
         >Stress test features for bugs and improvements. Submit bug
         reports/fixes to the development team for review. Support the product
         team with UI/UX insights.</span
       >
     </p>
     <p class="c1">
-      <span class="c0"
+      <span class="c2"
         >MEC Education Technology Center, Computer Lab Technician</span
-      ><span class="c7">&nbsp;(</span
-      ><span class="c2">October 2019 - March 2020)</span>
+      ><span class="c10">&nbsp;(</span
+      ><span class="c0">October 2019 - March 2020)</span>
     </p>
     <p class="c1">
-      <span class="c2"
+      <span class="c0"
         >Provide students and faculty with CUNY Blackboard support. Respond to
         phone calls and orders from the supervisor.</span
       >
     </p>
-    <p class="c1 c3"><span class="c2"></span></p>
-    <p class="c1"><span class="c9 c0 c8">PROJECTS</span></p>
+    <p class="c1 c3"><span class="c0"></span></p>
+    <p class="c1"><span class="c2 c9 c7">PROJECTS</span></p>
     <p class="c1">
-      <span class="c0 c8 c11"
+      <span class="c2 c5"
         ><a
           class="c4"
-          href="https://www.google.com/url?q=https://github.com/yauhofung/PandemicSimulation&amp;sa=D&amp;source=editors&amp;ust=1661713478682577&amp;usg=AOvVaw07-tWhYQvGHRsikD9_cXfO"
+          href="https://www.google.com/url?q=https://github.com/yauhofung/PandemicSimulation&amp;sa=D&amp;source=editors&amp;ust=1661714525894828&amp;usg=AOvVaw2nwlhswQQaURavPEZCDmEx"
           >MATLAB Pandemic Simulation</a
         ></span
-      ><span class="c0">, Scientific Programming Final Project</span
-      ><span class="c7">&nbsp;(December 2021)</span>
+      ><span class="c2">, Scientific Programming Final Project</span
+      ><span class="c10">&nbsp;(December 2021)</span>
     </p>
     <p class="c1">
-      <span class="c0 c8 c11"
+      <span class="c5 c2"
         ><a
           class="c4"
-          href="https://www.google.com/url?q=https://github.com/yauhofung/AnimationTest&amp;sa=D&amp;source=editors&amp;ust=1661713478682980&amp;usg=AOvVaw3vds81oRENVri39QPcbBLT"
+          href="https://www.google.com/url?q=https://github.com/yauhofung/AnimationTest&amp;sa=D&amp;source=editors&amp;ust=1661714525895381&amp;usg=AOvVaw2uYrAeQOeiX84iq-dCxdTj"
           >C++ Animation Test</a
         ></span
-      ><span class="c0">, Personal Experimental Project</span
-      ><span class="c2">&nbsp;(November 2021)</span>
+      ><span class="c2">, Personal Experimental Project</span
+      ><span class="c0">&nbsp;(November 2021)</span>
     </p>
     <p class="c1">
-      <span class="c0 c8 c11"
+      <span class="c5 c2"
         ><a
           class="c4"
-          href="https://www.google.com/url?q=https://github.com/yauhofung/MovieSearchEngine&amp;sa=D&amp;source=editors&amp;ust=1661713478683357&amp;usg=AOvVaw0UtTEidWpcddD8TUCMZMcT"
+          href="https://www.google.com/url?q=https://github.com/yauhofung/MovieSearchEngine&amp;sa=D&amp;source=editors&amp;ust=1661714525895798&amp;usg=AOvVaw0Xy6-5zo_LGPnWwRWs6-EL"
           >Movie Search Engine</a
         ></span
-      ><span class="c0">, CUNY 2X Tech Talent Pipeline Capstone Project</span
-      ><span class="c2">&nbsp;(January 2021)</span>
+      ><span class="c2">, CUNY 2X Tech Talent Pipeline Capstone Project</span
+      ><span class="c0">&nbsp;(January 2021)</span>
     </p>
     <p class="c1">
-      <span class="c0 c8 c11"
+      <span class="c5 c2"
         ><a
           class="c4"
-          href="https://www.google.com/url?q=https://github.com/yauhofung/RandomGenerator&amp;sa=D&amp;source=editors&amp;ust=1661713478683754&amp;usg=AOvVaw3u569cq3NB4r75IEMDiJLD"
+          href="https://www.google.com/url?q=https://github.com/yauhofung/RandomGenerator&amp;sa=D&amp;source=editors&amp;ust=1661714525896229&amp;usg=AOvVaw0PTdBoipO-KT9YTxk2dLSx"
           >C++ Random Generator</a
         ></span
-      ><span class="c0">, Personal Experimental Project</span
-      ><span class="c2">&nbsp;(October 2019)</span>
+      ><span class="c2">, Personal Experimental Project</span
+      ><span class="c0">&nbsp;(October 2019)</span>
     </p>
-    <p class="c1 c3"><span class="c2"></span></p>
-    <p class="c1"><span class="c9 c0 c8">EDUCATION</span></p>
+    <p class="c1 c3"><span class="c0"></span></p>
+    <p class="c1"><span class="c2 c9 c7">EDUCATION</span></p>
     <p class="c1">
-      <span class="c0">CUNY </span
-      ><span class="c0">Medgar Evers College, Computer Science B.S.</span
-      ><span class="c2">&nbsp;(August 2018 - December 2021)</span>
+      <span class="c2">CUNY </span
+      ><span class="c2">Medgar Evers College, Computer Science B.S.</span
+      ><span class="c0">&nbsp;(August 2018 - December 2021)</span>
     </p>
-    <p class="c1"><span class="c2">3.928 GPA</span></p>
-    <p class="c1 c3"><span class="c2"></span></p>
-    <p class="c1"><span class="c9 c0 c8">ACHIEVEMENTS</span></p>
+    <p class="c1"><span class="c0">3.928 GPA</span></p>
+    <p class="c1 c3"><span class="c0"></span></p>
+    <p class="c1"><span class="c2 c9 c7">ACHIEVEMENTS</span></p>
     <p class="c1">
-      <span class="c0"
+      <span class="c2"
         >CUNY Medgar Evers College, Valedictorian of the Class of 2022</span
-      ><span class="c2">&nbsp;(June 2022)</span>
+      ><span class="c0">&nbsp;(June 2022)</span>
     </p>
     <p class="c1">
-      <span class="c0">CUNY Medgar Evers College, </span
-      ><span class="c0">Dean&rsquo;s List</span
-      ><span class="c2"
+      <span class="c2">CUNY Medgar Evers College, </span
+      ><span class="c2">Dean&rsquo;s List</span
+      ><span class="c0"
         >&nbsp;(June 2021, December 2020, June 2020, January 2020, June
         2019)</span
       >
     </p>
     <p class="c1">
-      <span class="c0"
+      <span class="c2"
         >CUNY Medgar Evers College, Award of Outstanding Academic
         Excellence</span
-      ><span class="c2">&nbsp;(May 2020)</span>
+      ><span class="c0">&nbsp;(May 2020)</span>
     </p>
     <p class="c1">
-      <span class="c0"
+      <span class="c2"
         >CUNY Medgar Evers College, First Place Winner of the CS Students
         Programming Contest</span
-      ><span class="c2">&nbsp;(May 2020)</span>
+      ><span class="c0">&nbsp;(May 2020)</span>
     </p>
     <p class="c1">
-      <span class="c0">College Board, AP Scholar with Distinction</span
-      ><span class="c2">&nbsp;(July 2018)</span>
+      <span class="c2">College Board, AP Scholar with Distinction</span
+      ><span class="c0">&nbsp;(July 2018)</span>
     </p>
   </body>
 </html>
